[project]
name = "incident-response-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "black>=26.5.1",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
